# Robaki

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .tokeignore  Doxyfile  LICENSE  Makefile  README.md  generate_deps.bat  generate_deps.sh  meson.build
include/pch/: common_pch.hpp
src/: main.cpp
src/assets/io/: file.cpp  file.hpp
src/event/: dispatcher.hpp  emitter.hpp  event.cpp  event.hpp  handler.hpp  listener.hpp  object.hpp  provider.hpp  subscriber.hpp
src/log/: backtracker.hpp  details.hpp  location.hpp  message.hpp  message_buffer.hpp
src/managers/: event_manager.hpp  state_manager.hpp
src/memory/: affix_allocator.cpp  affix_allocator.hpp  allocator_interface.hpp  block.hpp  buffer_ref.cpp  buffer_ref.hpp  cascading_allocator.cpp  cascading_allocator.hpp  fallback_allocator.cpp  fallback_allocator.hpp  free_list.cpp  free_list.hpp  null_allocator.cpp  null_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp  utils.hpp
src/platform/: input.cpp  input.hpp  platform.cpp  platform.hpp  window.cpp  window.hpp
src/platform/glfw/: platform_glfw.cpp  platform_glfw.hpp
src/state/: state.hpp  state_manager.hpp
src/util/: demangle.hpp  expected.hpp  iterator.hpp  literals.hpp  log.hpp  macros.hpp  math.hpp  result.hpp  string.hpp  time.hpp  traits.hpp  types.hpp  util.hpp  uuid.hpp
tools/builder/: pyproject.toml  run.sh
tools/builder/src/: build.py
tools/builder/src/builders/: __init__.py  bgfx.py  common.py  fmt.py  glfw3.py  sfml.py  spdlog.py
tools/builder/src/utils/: types.py
