[tool.poetry]
name = "builder"
description = "Utility for building vendor libraries"
version = "0.1.0"
authors = ["claymore <marekczjk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
classopt = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
